--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Poem Generator</h1>
+    <header>
+      <h1>AI Poem Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        text text
+        <br />
+        text text
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Hatchk" target="_blank">Kerry Hatch</a> and is
