--- a/index.html
+++ b/index.html
@@ -7,38 +7,44 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Poem Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>AI Poem Generator</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        text text
-        <br />
-        text text
-      </div>
-    </main>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/Hatchk" target="_blank">Kerry Hatch</a> and is
-      <a href="https://github.com/Hatchk/poem-generator" target="_blank">
-        open-sourced on GitHub</a
-      >
-      and is
-      <a href="https://poem-generator-shecodes.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >.
-    </footer>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+            id="user-instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          text text
+          <br />
+          text text
+        </div>
+      </main>
+
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/Hatchk" target="_blank">Kerry Hatch</a> and
+        is
+        <a href="https://github.com/Hatchk/poem-generator" target="_blank">
+          open-sourced on GitHub</a
+        >
+        and is
+        <a href="https://poem-generator-shecodes.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >.
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
